removing fix for text overflow

--- a/static/css/launchPage.css
+++ b/static/css/launchPage.css
@@ -19,7 +19,6 @@ blockquote {
 	border-left: none;
 	margin:0;
 	padding: 0;
-	overflow: hidden;
 }
 
 blockquote div {
